feat: add prefixes

--- a/index.html
+++ b/index.html
@@ -1,137 +1,119 @@
-<!DOCTYPE html>
-<html lang="pl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TIUW</title>
-  </head>
-  <body>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./style.css" />
-    <div class="es-lancome" id="es-lancome">
-      <section class="es-banner">
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+  rel="stylesheet"
+/>
+<link rel="stylesheet" href="./style.css" />
+<div class="es-lancome" id="es-lancome">
+  <section class="es-banner">
+    <img class="es-banner__image" src="images/banner.svg" alt="Lancome logo" />
+  </section>
+
+  <section class="es-category">
+    <h2 class="es-category__title es-title">TEINT IDOLE ULTRA WEAR</h2>
+    <p class="es-category__subtitle">BESTSELLEROWY PODKŁAD OD LANCÔME</p>
+    <div class="es-category__items">
+      <div class="es-category__item">
         <img
-          class="es-banner__image"
-          src="images/banner.svg"
-          alt="Lancome logo"
+          class="es-category__image"
+          src="images/category-image-1.png"
+          alt="Pielęgnacja"
         />
-      </section>
-
-      <section class="es-category">
-        <h2 class="es-category__title es-title">TEINT IDOLE ULTRA WEAR</h2>
-        <p class="es-category__subtitle">BESTSELLEROWY PODKŁAD OD LANCÔME</p>
-        <div class="es-category__items">
-          <div class="es-category__item">
-            <img
-              class="es-category__image"
-              src="images/category-image-1.png"
-              alt="Pielęgnacja"
-            />
-            <div class="es-category__item-title">NATURALNY EFEKT</div>
-            <div class="es-category__item-subtitle">
-              Zdrowy i promienny wygląd skóry o naturalnym matowym wykończeniu,
-              bez efektu maski.
-            </div>
-          </div>
-          <div class="es-category__item">
-            <img
-              class="es-category__image"
-              src="images/category-image-2.png"
-              alt="Makijaż"
-            />
-            <div class="es-category__item-title">
-              24H TRWAŁOŚĆ I PIELĘGNACJA
-            </div>
-            <div class="es-category__item-subtitle">
-              Podkład o wydłużonej trwałości, pełnym kryciu i formule, która
-              pielęgnuje cerę, nie waży się i pozwala skórze oddychać.
-            </div>
-          </div>
-          <div class="es-category__item">
-            <img
-              class="es-category__image"
-              src="images/category-image-3.png"
-              alt="ZAPACHY"
-            />
-            <div class="es-category__item-title">
-              DOSTĘPNY AŻ W 45 ODCIENIACH
-            </div>
-            <div class="es-category__item-subtitle">
-              Podkład Teint Idole Ultra Wear jest dostępny w 45 odcieniach,
-              które pasują do 99% kobiecych karnacji*.
-            </div>
-          </div>
+        <div class="es-category__item-title">NATURALNY EFEKT</div>
+        <div class="es-category__item-subtitle">
+          Zdrowy i promienny wygląd skóry o naturalnym matowym wykończeniu, bez
+          efektu maski.
         </div>
-      </section>
-
-      <section class="es-category-2">
-        <div class="es-category-2__items">
-          <div class="es-category-2__item">
-            <img
-              class="es-category-2__image"
-              src="images/category-image-2-2.png"
-              alt="Lait Corporel L'Original"
-            />
-          </div>
-          <div class="es-category-2__item">
-            <h3 class="es-category-2__item-title">
-              Poznaj nowy wymiar trwałości <br />z podkładem Teint Idole Ultra
-              Wear!<br />
-            </h3>
-            <p class="es-category-2__item-text">
-              Jego innowacyjna formuła to połączenie perfekcyjnego krycia, które
-              utrzymuje się nienagannie przez 24 godziny, z niezwykłą lekkością
-              i&nbsp;komfortem noszenia. Podkład doskonale stapia się ze skórą,
-              pozwala jej&nbsp;swobodnie oddychać i nie tworzy efektu maski.
-              <br /><br />
-              Sekret tkwi w ulepszonej formule wzbogaconej o 81% pielęgnującego
-              serum z kwasem hialuronowym. Dzięki temu Twoja skóra jest nie
-              tylko pięknie zmatowiona, ale także odpowiednio nawilżona i
-              zadbana przez cały dzień.
-              <br /><br />
-              Teint Idole Ultra Wear to Twój sprzymierzeniec w każdej sytuacji.
-              Nie straszne mu ani upływ czasu, ani intensywny tryb życia. Jest
-              odporny na&nbsp;pot, wilgoć i sebum, zapewniając Ci nieskazitelny
-              wygląd od rana do&nbsp;wieczora.
-              <br /><br />
-              Szeroka gama 45 odcieni pozwala idealnie dopasować go do Twojej
-              karnacji, a filtr SPF35 dba o ochronę Twojej skóry przez
-              szkodliwym działaniem promieni.
-            </p>
-          </div>
+      </div>
+      <div class="es-category__item">
+        <img
+          class="es-category__image"
+          src="images/category-image-2.png"
+          alt="Makijaż"
+        />
+        <div class="es-category__item-title">24H TRWAŁOŚĆ I PIELĘGNACJA</div>
+        <div class="es-category__item-subtitle">
+          Podkład o wydłużonej trwałości, pełnym kryciu i formule, która
+          pielęgnuje cerę, nie waży się i pozwala skórze oddychać.
         </div>
-      </section>
-
-      <section class="es-video">
-        <p class="es-video__title">niezawodny partner</p>
-        <p class="es-video__subtitle">Teint Idole Ultra Wear</p>
-        <div class="es-video__wrapper">
-          <iframe
-            class="es-video__player es-video__player--mobile"
-            src="https://www.youtube.com/embed/nngG_qKQThQ"
-            title="TIUW"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          ></iframe>
-          <iframe
-            class="es-video__player es-video__player--desktop"
-            src="https://www.youtube.com/embed/nngG_qKQThQ"
-            title="TIUW"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          ></iframe>
-          <p class="es-video__disclaimer">
-            *W oparciu o test konsumencki wykonany we Francji na 240 kobietach.
-          </p>
+      </div>
+      <div class="es-category__item">
+        <img
+          class="es-category__image"
+          src="images/category-image-3.png"
+          alt="ZAPACHY"
+        />
+        <div class="es-category__item-title">DOSTĘPNY AŻ W 45 ODCIENIACH</div>
+        <div class="es-category__item-subtitle">
+          Podkład Teint Idole Ultra Wear jest dostępny w 45 odcieniach, które
+          pasują do 99% kobiecych karnacji*.
         </div>
-      </section>
+      </div>
     </div>
-  </body>
-</html>
+  </section>
+
+  <section class="es-category-2">
+    <div class="es-category-2__items">
+      <div class="es-category-2__item">
+        <img
+          class="es-category-2__image"
+          src="images/category-image-2-2.png"
+          alt="Lait Corporel L'Original"
+        />
+      </div>
+      <div class="es-category-2__item">
+        <h3 class="es-category-2__item-title">
+          Poznaj nowy wymiar trwałości <br />z podkładem Teint Idole Ultra
+          Wear!<br />
+        </h3>
+        <p class="es-category-2__item-text">
+          Jego innowacyjna formuła to połączenie perfekcyjnego krycia, które
+          utrzymuje się nienagannie przez 24 godziny, z niezwykłą lekkością
+          i&nbsp;komfortem noszenia. Podkład doskonale stapia się ze skórą,
+          pozwala jej&nbsp;swobodnie oddychać i nie tworzy efektu maski.
+          <br /><br />
+          Sekret tkwi w ulepszonej formule wzbogaconej o 81% pielęgnującego
+          serum z kwasem hialuronowym. Dzięki temu Twoja skóra jest nie tylko
+          pięknie zmatowiona, ale także odpowiednio nawilżona i zadbana przez
+          cały dzień.
+          <br /><br />
+          Teint Idole Ultra Wear to Twój sprzymierzeniec w każdej sytuacji. Nie
+          straszne mu ani upływ czasu, ani intensywny tryb życia. Jest odporny
+          na&nbsp;pot, wilgoć i sebum, zapewniając Ci nieskazitelny wygląd od
+          rana do&nbsp;wieczora.
+          <br /><br />
+          Szeroka gama 45 odcieni pozwala idealnie dopasować go do Twojej
+          karnacji, a filtr SPF35 dba o ochronę Twojej skóry przez szkodliwym
+          działaniem promieni.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section class="es-video">
+    <p class="es-video__title">niezawodny partner</p>
+    <p class="es-video__subtitle">Teint Idole Ultra Wear</p>
+    <div class="es-video__wrapper">
+      <iframe
+        class="es-video__player es-video__player--mobile"
+        src="https://www.youtube.com/embed/nngG_qKQThQ"
+        title="TIUW"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
+      <iframe
+        class="es-video__player es-video__player--desktop"
+        src="https://www.youtube.com/embed/nngG_qKQThQ"
+        title="TIUW"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
+      <p class="es-video__disclaimer">
+        *W oparciu o test konsumencki wykonany we Francji na 240 kobietach.
+      </p>
+    </div>
+  </section>
+</div>
